test/files/neg/t2144.scala
object Test {
  def foo[A](a: A) = new { def bar(x: A): A = x }
}
